@@ -13,3 +13,5 @@ Apr 21 1998	print under util_print contol
 
 Apr 27 1998	defaults without esp input block
                 move probe/factor to esp_rtdbin
+
+Jun 15 1998     print probe radius and atom radius factor
